パスワードを忘れたlink

--- a/login.html
+++ b/login.html
@@ -37,15 +37,20 @@
         <div class="col-sm-3"></div>
     </div>
     <div class="row">
-    <div class="col-sm-5"></div>
-    <div class="col-sm-2">
-        <button type="submit" class="btn btn-primary">ログイン</button>
+        <div class="col-sm-5"></div>
+        <div class="col-sm-2">
+            <button type="submit" class="btn btn-primary">ログイン</button>
+        </div>
+        <div class="col-sm-2">
+            <button type="submit" class="btn btn-primary">新規登録</button>
+        </div>
+        <div class="col-sm-3"></div>
     </div>
-    <div class="col-sm-2">
-        <button type="submit" class="btn btn-primary">新規登録</button>
+    <div>
+    <p class="text-center" margin-top: 5em>
+        <a href="#" class="text-primary">パスワードを忘れた</a>
+    </p>
     </div>
-    <div class="col-sm-3"></div>
-  </div>
 </div>
 
 </body>
