--- a/login.html
+++ b/login.html
@@ -47,7 +47,8 @@
         <div class="col-sm-3"></div>
     </div>
     <div>
-    <p class="text-center" margin-top: 5em>
+<p></p>
+    <p class="text-center">
         <a href="#" class="text-primary">パスワードを忘れた</a>
     </p>
     </div>
