--- a/home.html
+++ b/home.html
@@ -49,30 +49,21 @@
         <div class="col-sm-8">
           <h2 class="text-center"><a href="#">履修状況確認</a></h2>
           <h5 class="text-center">Title description</h5>
-          <table class="table table-striped">
+          <table class="table table-striped table-bordered">
             <thead>
               <tr>
-                <th></th>
-                <th>月</th>
-                <th>火</th>
-                <th>水</th>
-                <th>木</th>
-                <th>金</th>
-                <th>土</th>
+                <th scope="col"></th>
+                <th scope="col">月</th>
+                <th scope="col">火</th>
+                <th scope="col">水</th>
+                <th scope="col">木</th>
+                <th scope="col">金</th>
+                <th scope="col">土</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
+                <th scope="row">1限</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -81,16 +72,7 @@
                 <td></td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
+                <th scope="row">2限</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -99,7 +81,25 @@
                 <td></td>
               </tr>
               <tr>
+                <th scope="row">3限</th>
                 <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row">4限</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row">5限</th>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -109,23 +109,17 @@
               </tr>
             </tbody>
           </table>
-          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+          <p>aaaa</p>
           <br>
           <h2 class="text-center"><a href="#">シミュレーション</a></h2>
           <h5 class="text-center">Title description</h5>
-          <div class="fakeimg">Fake Image</div>
           <p>Some text..</p>
-          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
           <br>
           <h2 class="text-center"><a href="#">ユーザ一覧</a></h2>
           <h5 class="text-center">Title description</h5>
-          <div class="fakeimg">Fake Image</div>
           <p>Some text..</p>
-          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </div>
-        <div class="col-sm-2">
-            
-        </div>
+        <div class="col-sm-2"></div>
     </div>
 </div>
 
