--- a/home.html
+++ b/home.html
@@ -47,8 +47,8 @@
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-          <h2 class="text-center"><a href="#">履修状況確認</a></h2>
-          <h5 class="text-center">Title description</h5>
+          <h2 class="text-center"><a href="#">履修状況変更</a></h2>
+          <h5 class="text-center">自分の履修状況を確認・変更する</h5>
           <table class="table table-striped table-bordered">
             <thead>
               <tr>
@@ -112,12 +112,10 @@
           <p>aaaa</p>
           <br>
           <h2 class="text-center"><a href="#">シミュレーション</a></h2>
-          <h5 class="text-center">Title description</h5>
-          <p>Some text..</p>
+          <h5 class="text-center">卒業要件の単位数計算</h5>
           <br>
           <h2 class="text-center"><a href="#">ユーザ一覧</a></h2>
-          <h5 class="text-center">Title description</h5>
-          <p>Some text..</p>
+          <h5 class="text-center">他のユーザの履修状況を確認する</h5>
         </div>
         <div class="col-sm-2"></div>
     </div>
